Update product titles and images in index.html

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="El Mexiquense Market - Envíos de dinero, cambio de cheques, productos frescos y recetas auténticas mexicanas.">
-  <title>El Mexiquense Market - Tienda Mexicana Moderna</title>
+  <title>El Mexiquense Market</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;700;900&display=swap" rel="stylesheet">
   <style>
     /* Reset y estilos base */
@@ -739,18 +739,18 @@
       <div class="oferta-card">
         <span class="badge">¡Oferta!</span>
         <!-- Reemplaza esta imagen aquí -->
-        <img src="https://images.unsplash.com/photo-1546069901-ba9599a7b5c5?ixlib=rb-4.0.3&auto=format&fit=crop&w=400&q=80" alt="Producto 1">
+        <img src="https://png.pngtree.com/png-vector/20250312/ourmid/pngtree-watermelon-png-image_15759099.png" alt="Producto 1">
         <div class="oferta-content">
-          <h3>Chiles Frescos</h3>
-          <p><span class="precio-viejo">$10.00</span> <span class="precio-nuevo">$7.99</span></p>
+          <h3>SANDIA</h3>
+          <p><span class="precio-viejo">$5.99</span> <span class="precio-nuevo">$3.99</span></p>
         </div>
       </div>
       <div class="oferta-card">
         <span class="badge">¡Oferta!</span>
-        <img src="https://images.unsplash.com/photo-1603046891748-7f8f6b1c9044?ixlib=rb-4.0.3&auto=format&fit=crop&w=400&q=80" alt="Producto 2">
+        <img src="https://m.media-amazon.com/images/I/71etsI6xhmL._AC_UF894,1000_QL80_.jpg" alt="Producto 2">
         <div class="oferta-content">
-          <h3>Tortillas Artesanales</h3>
-          <p><span class="precio-viejo">$15.00</span> <span class="precio-nuevo">$12.99</span></p>
+          <h3>Tortillas El Milagro</h3>
+          <p><span class="precio-viejo">$24.99</span> <span class="precio-nuevo">$19.99</span></p>
         </div>
       </div>
       <div class="oferta-card">
