--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
         <p><del>$34.90</del> <strong style="color:var(--rojo-fuego);">$27.90</strong></p>
       </div>
       <div class="card" data-animate>
-        <img src="https://images.unsplash.com/photo-1546549039-49e9b4efcd4c?q=80&w=1200&auto=format&fit=crop" alt="Aguacates">
+        <img src="https://w7.pngwing.com/pngs/455/522/png-transparent-slice-avocado-fruit-avocado-avocado-food-photography-desktop-wallpaper-thumbnail.png" alt="Aguacates">
         <h3>Aguacate Hass</h3>
         <p><del>$59.90</del> <strong style="color:var(--rojo-fuego);">$39.90</strong></p>
       </div>
