--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
   flex: 0 0 100%;
   opacity: 0;
   transform: translateX(100%);
-  transition: all 0.8s ease;
+  transition: opacity 1s ease-in-out, transform 0.8s ease;
 }
 
 .slide.active {
