--- a/index.html
+++ b/index.html
@@ -363,6 +363,27 @@
       margin-top:3rem;
       animation:fadeIn 1s ease;
     }
+    @media (max-width: 480px) {
+  .slide-content {
+    min-height: 140px; /* aún más compacto */
+    padding: 1rem 0.8rem;
+  }
+
+  .slide-content h2 {
+    font-size: 1.1rem;
+  }
+
+  .slide-content p {
+    font-size: 0.85rem;
+    margin-bottom: 0.8rem;
+  }
+
+  .btn {
+    font-size: 0.85rem;
+    padding: 0.5rem 0.9rem;
+  }
+}
+
   </style>
 </head>
 <body>
