--- a/index.html
+++ b/index.html
@@ -316,7 +316,47 @@
     padding: 0.5rem 0.9rem;
   }
 }
+/* ==== CENTRADO VERTICAL UNIFORME EN TODAS LAS SLIDES ==== */
+.slide {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 
+.slide-image,
+.slide-content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.slide-image img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center center; /* centra la imagen sin cortar */
+  display: block;
+}
+
+/* En móvil, asegurar centrado del bloque completo */
+@media (max-width: 768px) {
+  .slide {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .slide-image img {
+    object-position: center center;
+    height: 35vh;
+  }
+
+  .slide-content {
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+  }
+}
     /* SECCIONES */
     section{
       padding:3rem 1rem;
