--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
   display: block;
 }
 
-/* En móvil, asegurar centrado del bloque completo */
+/* CENTRADO EN MÓVIL */
 @media (max-width: 768px) {
   .slide {
     flex-direction: column;
@@ -346,15 +346,44 @@
     justify-content: center;
   }
 
+  .slide-image {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
   .slide-image img {
-    object-position: center center;
+    object-fit: cover;
+    object-position: center;
+    width: 100%;
     height: 35vh;
+    border-radius: var(--radius) var(--radius) 0 0;
   }
 
   .slide-content {
     text-align: center;
     justify-content: center;
     align-items: center;
+    padding: 1.2rem 1rem;
+    height: auto;
+    min-height: 25vh;
+  }
+
+  .slide-content h2 {
+    font-size: 1.3rem;
+    margin-bottom: 0.5rem;
+  }
+
+  .slide-content p {
+    font-size: 0.9rem;
+    margin-bottom: 1rem;
+  }
+
+  .btn {
+    padding: 0.6rem 1rem;
+    font-size: 0.9rem;
+    margin: 0 auto;
   }
 }
     /* SECCIONES */
