--- a/index.html
+++ b/index.html
@@ -323,51 +323,56 @@
   justify-content: center;
 }
 
-.slide-image,
-.slide-content {
+.slide-image {
+  flex: 1 1 50%;
   display: flex;
-  flex-direction: column;
+  align-items: center;
   justify-content: center;
 }
 
 .slide-image img {
   width: 100%;
   height: 100%;
+  max-height: 400px;
   object-fit: cover;
-  object-position: center center; /* centra la imagen sin cortar */
-  display: block;
+  object-position: center;
+  border-radius: var(--radius) 0 0 var(--radius);
 }
 
-/* CENTRADO EN MÓVIL */
+.slide-content {
+  flex: 1 1 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: left;
+}
+
+/* CENTRADO Y PROPORCIÓN EN MÓVIL */
 @media (max-width: 768px) {
   .slide {
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
   }
 
   .slide-image {
     width: 100%;
-    display: flex;
+    height: 35vh;
     justify-content: center;
-    align-items: center;
   }
 
   .slide-image img {
-    object-fit: cover;
-    object-position: center;
     width: 100%;
-    height: 35vh;
+    height: 100%;
     border-radius: var(--radius) var(--radius) 0 0;
+    object-fit: cover;
   }
 
   .slide-content {
+    width: 100%;
     text-align: center;
     justify-content: center;
     align-items: center;
-    padding: 1.2rem 1rem;
-    height: auto;
     min-height: 25vh;
+    padding: 1.2rem 1rem;
   }
 
   .slide-content h2 {
@@ -383,9 +388,9 @@
   .btn {
     padding: 0.6rem 1rem;
     font-size: 0.9rem;
-    margin: 0 auto;
   }
 }
+
     /* SECCIONES */
     section{
       padding:3rem 1rem;
