--- a/index.html
+++ b/index.html
@@ -254,51 +254,97 @@
     .next { right: 15px; }
 
     /* 📱 RESPONSIVE MÓVIL */
-    @media (max-width: 768px) {
-      .feature-slider {
-        margin: 2rem auto;
-        max-height: 80vh;
-      }
+   /* 📱 RESPONSIVE MÓVIL */
+@media (max-width: 768px) {
+  .feature-slider {
+    margin: 2rem auto;
+    max-height: none; /* permite que crezca dinámicamente */
+  }
 
-      .slides { height: auto; }
+  .slides {
+    height: auto;
+  }
 
-      .slide {
-        position: relative;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-      }
+  .slide {
+    position: relative;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+  }
 
-      .slide-image img {
-        height: 35vh;
-        border-radius: var(--radius) var(--radius) 0 0;
-      }
+  .slide-image {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 
-      .slide-content {
-        padding: 1.2rem 1rem;
-        text-align: center;
-        min-height: 25vh;
-      }
+  .slide-image img {
+    width: 100%;
+    height: auto; /* ajusta la proporción natural */
+    max-height: 55vh; /* evita que crezca demasiado */
+    object-fit: contain; /* muestra toda la imagen */
+    object-position: center;
+    border-radius: var(--radius) var(--radius) 0 0;
+  }
 
-      .slide-content h2 { font-size: 1.3rem; margin-bottom: 0.5rem; }
-      .slide-content p { font-size: 0.9rem; margin-bottom: 1rem; }
+  .slide-content {
+    padding: 1.2rem 1rem;
+    text-align: center;
+    min-height: auto;
+    background: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
 
-      .btn { margin: 0 auto; font-size: 0.9rem; padding: 0.6rem 1rem; }
+  .slide-content h2 {
+    font-size: 1.3rem;
+    margin-bottom: 0.5rem;
+  }
 
-      .arrow { bottom: 10px; top: auto; }
-    }
+  .slide-content p {
+    font-size: 0.9rem;
+    margin-bottom: 1rem;
+  }
 
-    /* Teléfonos pequeños */
-    @media (max-width: 480px) {
-      .slide-image img { height: 32vh; }
-      .slide-content {
-        min-height: 22vh;
-        padding: 1rem 0.8rem;
-      }
-      .slide-content h2 { font-size: 1.1rem; }
-      .slide-content p { font-size: 0.85rem; margin-bottom: 0.8rem; }
-      .btn { font-size: 0.85rem; padding: 0.5rem 0.9rem; }
-    }
+  .btn {
+    padding: 0.6rem 1rem;
+    font-size: 0.9rem;
+  }
+
+  .arrow {
+    bottom: 10px;
+    top: auto;
+  }
+}
+
+/* 📱 Teléfonos muy pequeños */
+@media (max-width: 480px) {
+  .slide-image img {
+    max-height: 45vh; /* más compacta y proporcional */
+  }
+
+  .slide-content {
+    padding: 1rem 0.8rem;
+  }
+
+  .slide-content h2 {
+    font-size: 1.1rem;
+  }
+
+  .slide-content p {
+    font-size: 0.85rem;
+    margin-bottom: 0.8rem;
+  }
+
+  .btn {
+    font-size: 0.85rem;
+    padding: 0.5rem 0.9rem;
+  }
+}
+
 
     /* =============================
        🧱 SECCIONES GENERALES
