--- a/index.html
+++ b/index.html
@@ -248,17 +248,11 @@
       transition: background 0.3s;
       z-index: 10;
     }
-
-    .arrow:hover { background: rgba(0, 0, 0, 0.7); }
-    .prev { left: 15px; }
-    .next { right: 15px; }
-
-    /* 📱 RESPONSIVE MÓVIL */
-   /* 📱 RESPONSIVE MÓVIL */
+/* 📱 RESPONSIVE MÓVIL */
 @media (max-width: 768px) {
   .feature-slider {
     margin: 2rem auto;
-    max-height: none; /* permite que crezca dinámicamente */
+    max-height: 80vh;
   }
 
   .slides {
@@ -269,29 +263,26 @@
     position: relative;
     flex-direction: column;
     align-items: center;
-    justify-content: flex-start;
+    justify-content: center;
   }
 
   .slide-image {
     width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    height: 45vh; /* altura proporcional */
   }
 
   .slide-image img {
     width: 100%;
-    height: auto; /* ajusta la proporción natural */
-    max-height: 55vh; /* evita que crezca demasiado */
-    object-fit: contain; /* muestra toda la imagen */
-    object-position: center;
+    height: 100%;
+    object-fit: cover; /* llena el espacio sin distorsión */
+    object-position: center center;
     border-radius: var(--radius) var(--radius) 0 0;
   }
 
   .slide-content {
     padding: 1.2rem 1rem;
     text-align: center;
-    min-height: auto;
+    height: auto;
     background: white;
     display: flex;
     flex-direction: column;
@@ -320,10 +311,10 @@
   }
 }
 
-/* 📱 Teléfonos muy pequeños */
+/* 📱 Teléfonos pequeños */
 @media (max-width: 480px) {
-  .slide-image img {
-    max-height: 45vh; /* más compacta y proporcional */
+  .slide-image {
+    height: 38vh; /* un poco más compacta */
   }
 
   .slide-content {
@@ -344,7 +335,9 @@
     padding: 0.5rem 0.9rem;
   }
 }
-
+    .arrow:hover { background: rgba(0, 0, 0, 0.7); }
+    .prev { left: 15px; }
+    .next { right: 15px; }
 
     /* =============================
        🧱 SECCIONES GENERALES
