--- a/index.html
+++ b/index.html
@@ -248,16 +248,15 @@
       transition: background 0.3s;
       z-index: 10;
     }
-/* 📱 RESPONSIVE MÓVIL */
-/* 📱 RESPONSIVE MÓVIL */
 @media (max-width: 768px) {
   .feature-slider {
-    margin: 2rem auto;
-    max-height: none;
+    margin: 1rem auto;
+    max-height: 100vh; /* Ensure it fits within viewport */
   }
 
   .slides {
     height: auto;
+    max-height: calc(100vh - 80px); /* Account for header and margins */
   }
 
   .slide {
@@ -265,56 +264,63 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    min-height: 0; /* Prevent excessive height */
+    max-height: calc(100vh - 80px); /* Fit within viewport */
   }
 
   .slide-image {
     width: 100%;
-    height: auto;
+    height: 50vh; /* Reduced to fit within viewport */
+    max-height: 300px; /* Cap height for consistency */
   }
 
   .slide-image img {
     width: 100%;
-    height: 250px; /* mismo alto que la primera */
-    object-fit: cover; /* llena el espacio igual */
-    object-position: center center; /* centra perfectamente */
+    height: 100%; /* Fill the container */
+    max-height: 300px; /* Consistent with first slide */
+    object-fit: cover;
+    object-position: center center;
     border-radius: var(--radius) var(--radius) 0 0;
     display: block;
   }
 
   .slide-content {
     background: white;
-    padding: 1.5rem 1rem;
+    padding: 1rem;
     text-align: center;
     width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    max-height: 40vh; /* Limit content height */
   }
 
   .slide-content h2 {
-    font-size: 1.3rem;
-    margin-bottom: 0.5rem;
+    font-size: 1.2rem;
+    margin: 0.3rem 0;
   }
 
   .slide-content p {
-    font-size: 0.9rem;
-    margin-bottom: 1rem;
+    font-size: 0.85rem;
+    margin: 0.5rem 0;
     color: var(--texto-claro);
   }
 
   .btn {
-    font-size: 0.9rem;
-    padding: 0.6rem 1rem;
-    margin: 0 auto;
+    font-size: 0.85rem;
+    padding: 0.5rem 1rem;
+    margin: 0.5rem auto;
   }
 
   .arrow {
     bottom: 10px;
     top: auto;
+    width: 32px;
+    height: 32px;
+    font-size: 1.2rem;
   }
 }
-
 /* 📱 Teléfonos más pequeños */
 @media (max-width: 480px) {
   .slide-image img {
