--- a/index.html
+++ b/index.html
@@ -472,6 +472,18 @@
             <a href="#" class="btn">Ver más</a>
           </div>
         </div>
+         <div class="slides">
+        <div class="slide active">
+          <div class="slide-image">
+            <img src="https://st2.depositphotos.com/1799455/7612/i/450/depositphotos_76127411-stock-photo-hand-throwing-a-dollar-paper.jpg" alt="Envio Dinero" />
+          </div>
+          <div class="slide-content">
+            <span class="badge">Envios de Dinero</span>
+            <h2>Envia dinero a tus familiares al extranjero</h2>
+            <p>Envia dinero fácil, rapido, seguro y a toda Latinoamerica. Las mejores tarifas y os mejores precios, envia dinero con seguridad a tu familia en el extranjero.</p>
+            <a href="#" class="btn">Ver más</a>
+          </div>
+        </div>
       <button class="arrow prev">‹</button>
       <button class="arrow next">›</button>
     </section>
