--- a/web.html
+++ b/web.html
@@ -339,6 +339,42 @@
     /* Utilities */
     .muted{ color: var(--texto-claro); }
     .cta-small{ font-size:.95rem; }
+    /* ==== CARRUSEL RESPONSIVE ==== */
+@media (max-width: 768px) {
+  #promociones .slide {
+    flex-direction: column;
+  }
+  #promociones .slide-image {
+    width: 100%;
+    height: 45vh;
+  }
+  #promociones .slide-image img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center center;
+    border-radius: var(--radius) var(--radius) 0 0;
+  }
+  #promociones .slide-content {
+    width: 100%;
+    padding: 1.5rem 1rem;
+    background: white;
+    border-radius: 0 0 var(--radius) var(--radius);
+    text-align: center;
+  }
+  #promociones .slide-content h2 {
+    font-size: 1.3rem;
+    margin-bottom: 0.5rem;
+  }
+  #promociones .slide-content p {
+    font-size: 0.9rem;
+    margin-bottom: 1rem;
+  }
+  #promociones .btn {
+    font-size: 0.9rem;
+    padding: 0.6rem 1rem;
+  }
+}
   </style>
 </head>
 <body>
