--- a/web.html
+++ b/web.html
@@ -375,6 +375,55 @@
     padding: 0.6rem 1rem;
   }
 }
+    /* 🔧 FIX: Asegurar visualización correcta en móvil */
+@media (max-width: 768px) {
+  #promociones .slide {
+    display: flex !important;
+    flex-direction: column !important;
+    align-items: center !important;
+    justify-content: flex-start !important;
+  }
+
+  #promociones .slide-image {
+    order: 1;
+    width: 100% !important;
+    height: auto !important;
+    max-height: 280px;
+  }
+
+  #promociones .slide-image img {
+    width: 100% !important;
+    height: 100% !important;
+    object-fit: cover !important;
+    object-position: center !important;
+    border-radius: var(--radius) var(--radius) 0 0 !important;
+    display: block !important;
+  }
+
+  #promociones .slide-content {
+    order: 2;
+    background: white;
+    width: 100% !important;
+    padding: 1.2rem 1rem !important;
+    text-align: center;
+    border-radius: 0 0 var(--radius) var(--radius);
+  }
+
+  #promociones .slide-content h2 {
+    font-size: 1.2rem;
+    margin-bottom: 0.5rem;
+  }
+
+  #promociones .slide-content p {
+    font-size: 0.9rem;
+    margin-bottom: 1rem;
+  }
+
+  #promociones .btn {
+    margin: 0 auto;
+    font-size: 0.9rem;
+  }
+}
   </style>
 </head>
 <body>
